# warehouse_stack

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: parameter.yaml
launch/: node_launcher.py
src/: data_logger.cpp  location.cpp  status_manager.cpp  task_execution.cpp  task_manager.cpp
src/performance_logs/: mission_report_2026-06-10_16-16-22.json  mission_report_2026-06-10_16-21-59.json  mission_report_2026-06-10_16-30-56.json  mission_report_2026-06-10_16-52-52.json  mission_report_2026-06-10_17-01-27.json  mission_report_v1.1_2026-06-12_10-23-10.json  mission_report_v1.1_2026-06-12_10-26-29.json  mission_report_v1.1_2026-06-12_10-31-14.json  mission_report_v1.1_2026-06-12_10-36-12.json  mission_report_v1.1_2026-06-12_18-16-25.json  mission_report_v1.2_2026-06-13_19-15-59.json  mission_report_v1.2_2026-06-13_19-20-01.json  mission_report_v1.2_2026-06-13_19-21-56.json  mission_report_v1.2_2026-06-13_20-28-20.json  mission_report_v1.2_2026-06-14_17-16-24.json
